     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
       and <trackfilename>.mood now work) 
     * Change example SQL command for setting up an external database to remove
       (sometimes incorrect) host name and possibly fix some random regression in
       some MySQL versions. (BR 225052)

  BUGFIXES:
     * Fix permission errors happening for each file copied to an iPhone via ifuse.
       Thank you to Colin Guthrie <cguthrie@mandriva.org> for the patch. (BR 231021)
     * Fix issues with using random navigators while filetering or searching The
       Playlist. (BR 229226) (BR 222129)
     * Fixed crash related to the new playlist tooltips. (BR 229696)
     * Fixed some artist/album/track names not getting shown or getting shown 
       incorrectly in the Current Track applet because of html encoding. 
       (BR 222765)
     * Fixed issue with the Albums applet not correctly updating when playing a 
       track by an artist not present in the local collection. 
     * Fixed Albums applet not getting updated if the artist of the currently 
       playing track was edited. (BR 210296)
     * Fixed bad window title for the details edit dialog in the playlist layout 
       editor. (BR 227912)
     * Fixed wrong track getting dragged from The Playlist when sorting and/or
       filtering is active. (BR 226503)
     * Fixed visual indication for "Stop After This Track" not getting shown 
       immediately when using the global shortcut. (BR 230569)
     * Cover fetcher: Fixed a crash involving reappearing cover found dialogs
       and pending cover fetches. (BR 230215)
     * Display tooltips with applet names in the context toolbar. (BR 230736)
     * File browser: "Add to Playlist" doesn't add playlist files to the playlist.
       (BR 229290)


VERSION 2.3
  FEATURES:
    * Podcast channels and episodes can be dragged to add them to other
      providers. (BR 195704)